# llm-reviews

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: server.py
app/templates/: chat.html
evaluation/: __init__.py  alternative_workflow_prompts.json  benchmark_metrics.py  benchmark_schema.py  cost_latency.py  dataset_stats.py  failure_examples.py  interface_robustness_prompts.json  live_baseline_ablation.py  live_controlled_component_ablation_items.json  live_model_substitution.py  live_pilot.py  metrics.py  model_config.py  model_configs.json  model_interface_robustness.py  oats_dataset_stats.py  oats_eval.py  oats_label_mapping.py  oats_metrics.py  programmatic_gold.py  run_ablations.py  run_baselines.py  run_benchmark.py  run_live_controlled_component_ablation.py  scalability.py  security_consistency.py
scripts/: download_public_samples.py  evaluate_oats_metrics.py  prepare_public_dataset.py  run_smoke.py  sample_amazon_reviews.py
tests/: conftest.py  test_analytics_security.py  test_benchmark_runner.py  test_config.py  test_evaluation_smoke.py  test_framework_alignment.py  test_imports.py  test_live_baseline_ablation.py  test_metrics.py  test_model_interface_robustness.py  test_model_substitution.py  test_orchestrator_query_time_flow.py  test_orchestrator_smoke.py  test_pilot_behavior_fixes.py  test_public_dataset_loaders.py  test_retrieval_enrichment_pipeline.py  test_reviewer_response_safeguards.py  test_sampling.py  test_semantic_schema.py  test_semantic_tagging_and_reasoning.py  test_server.py  test_sql_validator.py
(+38 files in other folders)
